# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
lib/bart/: parse.cpp  parse.h
src/: BoundingVolume.cpp  BoundingVolume.h  Camera.h  Color.cpp  Color.h  Definition.h  KDTree.cpp  KDTree.h  Light.cpp  Light.h  Material.cpp  Material.h  Matrix.cpp  Matrix.h  Planes.cpp  Planes.h  Point.cpp  Point.h  PrimColle.cpp  PrimColle.h  Primitive.cpp  Primitive.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Solids.cpp  Solids.h  Texture.cpp  Texture.h  Tree.cpp  Tree.h  TriangleMesh.cpp  TriangleMesh.h  Utils.cpp  Utils.h  VPBase.cpp  VPBase.h  (+5 more)
